--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
         <div class="top">
           
-          <img src="assets/img/1.webp" alt="immagine1">
+          <img class="image-a" src="assets/img/1.webp" alt="immagine1-A">
+          <img class="image-b" src="assets/img/1b.webp" alt="immagine1-B">
 
           <div class="like"></div>
         
@@ -31,6 +32,15 @@
           </div>
 
         </div>
+
+        <div class="bottom">
+          <p class="brand">Levi's</p>
+          <h4>RELAXED FIT TEE UNISEX</h4>
+          <span class="sales-price">14,99</span>
+          <span class="original-price">29,99</span>
+        </div>
+
+      </div>
 
       <div class="product">
         PRODUCT
