--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         </div>
 
         <div class="bottom">
-          <p class="brand">Levi's</p>
-          <h4>RELAXED FIT TEE UNISEX</h4>
-          <span class="sales-price">14,99</span>
+          <p class="brand">Guess</p>
+          <h4>ROSES TEE</h4>
+          <span class="sales-price">20,99</span>
           <span class="original-price">29,99</span>
         </div>
 
@@ -86,10 +86,10 @@
         </div>
 
         <div class="bottom">
-          <p class="brand">Levi's</p>
-          <h4>RELAXED FIT TEE UNISEX</h4>
-          <span class="sales-price">14,99</span>
-          <span class="original-price">29,99</span>
+          <p class="brand">COME ZUCCHERO FILATO</p>
+          <h4>VOGLIA DI COLORI PASTELLO</h4>
+          <span class="sales-price">129,99</span>
+          <!-- <span class="original-price">29,99</span> -->
         </div>
 
       </div>
@@ -119,7 +119,7 @@
 
         <div class="bottom">
           <p class="brand">Levi's</p>
-          <h4>RELAXED FIT TEE UNISEX</h4>
+          <h4>TEE UNISEX</h4>
           <span class="sales-price">14,99</span>
           <span class="original-price">29,99</span>
         </div>
@@ -138,10 +138,10 @@
         </div>
 
         <div class="bottom">
-          <p class="brand">Levi's</p>
-          <h4>RELAXED FIT TEE UNISEX</h4>
-          <span class="sales-price">14,99</span>
-          <span class="original-price">29,99</span>
+          <p class="brand">Maya Deluxe</p>
+          <h4>STRIPE BODICE</h4>
+          <span class="sales-price">99,99</span>
+          <!-- <span class="original-price">29,99</span> -->
         </div>
 
       </div>
@@ -156,7 +156,7 @@
           <div class="like"></div>
         
           <div class="label">
-            
+
             <span class="green">Sostenibilità</span>
 
           </div>
@@ -164,10 +164,10 @@
         </div>
 
         <div class="bottom">
-          <p class="brand">Levi's</p>
-          <h4>RELAXED FIT TEE UNISEX</h4>
-          <span class="sales-price">14,99</span>
-          <span class="original-price">29,99</span>
+          <p class="brand">Esprit</p>
+          <h4>MAGLIONE NERO</h4>
+          <span class="sales-price">29,99</span>
+          <!-- <span class="original-price">29,99</span> -->
         </div>
 
       </div>
