--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
   <div class="container">
 
+    <!-- 1a RIGA PRODOTTI -->
     <div class="row">
 
+      <!-- 1° prodotto -->
       <div class="product">
 
         <div class="top">
@@ -42,6 +44,7 @@
 
       </div>
 
+      <!-- 2° prodotto -->
       <div class="product">
 
         <div class="top">
@@ -68,6 +71,7 @@
 
       </div>
 
+      <!-- 3° prodotto -->
       <div class="product">
 
         <div class="top">
@@ -95,9 +99,12 @@
       </div>
 
     </div>
+    <!-- /1a RIGA PRODOTTI -->
 
+    <!-- 2a RIGA PRODOTTI -->
     <div class="row">
 
+      <!-- 4° prodotto -->
       <div class="product">
 
         <div class="top">
@@ -126,6 +133,7 @@
 
       </div>
 
+      <!-- 5° prodotto -->
       <div class="product">
 
         <div class="top">
@@ -146,6 +154,7 @@
 
       </div>
 
+      <!-- 6° prodotto -->
       <div class="product">
 
         <div class="top">
@@ -173,6 +182,7 @@
       </div>
 
     </div>
+    <!-- /2a RIGA PRODOTTI -->
 
   </div>
   
