product width calc test

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="bottom">
-          <p class="brand">COME ZUCCHERO FILATO</p>
+          <p class="brand">Come Zucchero Filato</p>
           <h4>VOGLIA DI COLORI PASTELLO</h4>
           <span class="sales-price">129,99</span>
           <!-- <span class="original-price">29,99</span> -->
